feat: support for @security annotation in block comment
